# network_tester

./: README.md  logger.py  master.py  slave.py
catkin_ws/devel/: .catkin  _setup_util.py  setup.sh
catkin_ws/devel/lib/cpp/: cpp_node
catkin_ws/devel/lib/pkgconfig/: cpp.pc  python.pc
catkin_ws/devel/share/cpp/cmake/: cppConfig.cmake
catkin_ws/devel/share/python/cmake/: pythonConfig.cmake
catkin_ws/src/cpp/: CMakeLists.txt
catkin_ws/src/cpp/include/cpp/: main.h
catkin_ws/src/cpp/lib/mavlink/ardupilotmega/: bioair.h  mavlink_msg_bioair_node_meta_data.h  mavlink_msg_bioair_node_network_edge.h
catkin_ws/src/cpp/src/: main.cpp  receiver.cpp  sender.cpp
catkin_ws/src/python/: CMakeLists.txt  package.xml
catkin_ws/src/python/src/: receiver.py  sender.py
cpp/: CMakeLists.txt  main.cpp  receiver.cpp  sender.cpp
cpp/includes/: context.h  receiver.h  sender.h
cpp/lib/mavlink/ardupilotmega/: mavlink.h  mavlink_msg_bioair_configurations.h  mavlink_msg_bioair_node_status.h  mavlink_msg_bioair_status.h  mavlink_msg_bioair_velocity_command.h  testsuite.h  version.h
